--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1"
   }
 }
