--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "file.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "dev": "nodemon app.js -e js,hbs"
+    "start": "node server.js",
+    "dev": "nodemon server.js -e js,hbs"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,7 @@
   "type": "module",
   "dependencies": {
     "dotenv": "^16.0.1",
-    "ejs": "^3.1.8",
+    "ejs": "^3.1.6",
     "express": "^4.18.1",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
