--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "express": "^4.18.1",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
-    "nodemon": "^2.0.19"
+    "jade": "^1.11.0",
+    "mssql": "^9.0.0",
+    "mustache": "^4.2.0",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.19",
+    "pug": "^3.0.2"
   }
 }
