--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.6",
     "express": "^4.18.1",
+    "hbs": "^4.2.0",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "jade": "^1.11.0",
