--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "jade": "^1.11.0",
+    "mongoose": "^6.5.2",
     "mssql": "^9.0.0",
     "mustache": "^4.2.0",
     "mysql": "^2.18.1",
