--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "readline": "^1.3.0",
     "tls": "^0.0.1",
     "util": "^0.12.4"
+  },
+  "devDependencies": {
+    "@types/node": "^18.7.14"
   }
 }
