--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "colors": "^1.4.0",
     "dotenv": "^16.0.1",
-    "ejs": "^3.1.6",
+    "ejs": "^3.1.8",
     "events": "^3.3.0",
     "express": "^4.18.1",
     "hbs": "^4.2.0",
@@ -28,8 +28,10 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19",
     "okay": "^1.0.0",
+    "perf_hooks": "0.0.1",
     "pug": "^3.0.2",
     "readline": "^1.3.0",
+    "timers-promises": "^1.0.1",
     "tls": "^0.0.1",
     "util": "^0.12.4"
   },
