--- a/package.json
+++ b/package.json
@@ -18,22 +18,27 @@
     "ejs": "^3.1.8",
     "events": "^3.3.0",
     "express": "^4.18.1",
+    "express-basic-auth": "^1.2.1",
     "hbs": "^4.2.0",
-    "http": "^0.0.1-security",
+    "http": "0.0.1-security",
     "https": "^1.0.0",
     "jade": "^1.11.0",
+    "json-refs": "^3.0.15",
     "mongoose": "^6.5.2",
     "mssql": "^9.0.0",
     "mustache": "^4.2.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19",
     "okay": "^1.0.0",
+    "path": "^0.12.7",
     "perf_hooks": "0.0.1",
     "pug": "^3.0.2",
     "readline": "^1.3.0",
+    "swagger-ui-express": "^4.6.0",
     "timers-promises": "^1.0.1",
     "tls": "^0.0.1",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.14"
