--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "axios": "^1.3.4",
     "colors": "^1.4.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
@@ -23,6 +24,7 @@
     "http": "0.0.1-security",
     "https": "^1.0.0",
     "jade": "^1.11.0",
+    "jest": "^29.5.0",
     "json-refs": "^3.0.15",
     "mongoose": "^6.5.2",
     "mssql": "^9.0.0",
