--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "async_hooks": "^1.0.0",
     "axios": "^1.3.4",
     "colors": "^1.4.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
+    "esm": "^3.2.25",
     "events": "^3.3.0",
     "express": "^4.18.1",
     "express-basic-auth": "^1.2.1",
     "hbs": "^4.2.0",
     "http": "0.0.1-security",
     "https": "^1.0.0",
-    "jade": "^1.11.0",
+    "jade": "^1.9.2",
     "jest": "^29.5.0",
     "json-refs": "^3.0.15",
+    "luxon-business-days": "^3.0.1",
     "mongoose": "^6.5.2",
     "mssql": "^9.0.0",
     "mustache": "^4.2.0",
@@ -40,6 +43,7 @@
     "timers-promises": "^1.0.1",
     "tls": "^0.0.1",
     "util": "^0.12.4",
+    "uuid": "^9.0.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
