--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "async_hooks": "^1.0.0",
     "axios": "^1.3.4",
+    "benchmark": "^2.1.4",
     "colors": "^1.4.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "esm": "^3.2.25",
@@ -25,7 +27,7 @@
     "hbs": "^4.2.0",
     "http": "0.0.1-security",
     "https": "^1.0.0",
-    "jade": "^1.9.2",
+    "jade": "^0.31.2",
     "jest": "^29.5.0",
     "json-refs": "^3.0.15",
     "luxon-business-days": "^3.0.1",
